# RetroSLM

./: CMakeLists.txt  LICENSE  Makefile  README.md  RetroSLM  TO-DO  build-conan.cmd  build-conan.sh  build-mingw64.sh  build.cmd  build.sh  conanfile.txt  main.cpp
.github/workflows/: build-release.yml
BazaDanych/: program.ini
include/: Faktury.h  Historia.h  Klienci.h  Magazyn.h  init
include/ftxui/component/: animation.hpp  captured_mouse.hpp  component.hpp  component_options.hpp  event.hpp  loop.hpp  receiver.hpp  screen_interactive.hpp
include/ftxui/dom/: canvas.hpp  deprecated.hpp  elements.hpp  node.hpp  requirement.hpp  selection.hpp  table.hpp  take_any_args.hpp
include/ftxui/screen/: box.hpp  color.hpp  image.hpp  pixel.hpp  screen.hpp  string.hpp
include/ftxui/util/: ref.hpp
lib/: init
lib/cmake/ftxui/: ftxui-targets-debug.cmake  ftxui-targets.cmake
lib/pkgconfig/: ftxui.pc
src/: Faktury.cpp  Historia.cpp  Klienci.cpp  Magazyn.cpp
